<resources>
    <string name="app_name" translatable="false">Otel App</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_using_phone_no"><u>Login Using Phone No.</u></string>
    <string name="login_using_email"><u>Login Using Email</u></string>
    <string name="dont_have_acc"><u>Do not have account? Signup</u></string>
    <string name="already_have_account"><u>Already have an Account? Login</u></string>
    <string name="string_roomNo">Room No.: </string>
    <string name="string_fare">Fare of Room: Rs </string>
    <string name="string_Phone">"Phone: "</string>
    <string name="degree" translatable="false">°</string>

    //Gender Array for drop down
    <string-array name="genderDropDownArray">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- -
    This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="banner_ad_unit_id">YOUR_BANNER_AD_UNIT_ID</string>
    <string name="welcome_description">You can book Room by clickingBook Now. Or keep watching ads :)</string>
    <string name="welcome_note">Welcome aboard!</string>
    <string name="current_city">Mianwali</string>
    <string name="book_on_the_go">Book on the Go!</string>
    <string name="book_room_now">Book Room Now</string>
    <string name="room_details">Details</string>
    <string name="room_fare">Room Fare is:</string>
    <string name="room_no_is">Room No. 03</string>
    <string name="loading_image">Loading Image</string>
    <string name="book_as_user">Book as :</string>
    <string name="string_username">Username:</string>
    <string name="string_phone">Phone:</string>
    <string name="book_room">Book Now</string>
    <string name="string_login">Login</string>
    <string name="user_profile">User Profile</string>
    <string name="enter_your_information_below">Enter your information below!</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="phone_number_3xxxxxx">Phone number (3xxxxxx)</string>
    <string name="cnic_without_dashes">CNIC (without dashes)</string>
    <string name="gender">Gender</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required.</string>
    <string name="admin_success">Admin Success</string>
    <string name="invalid_admin_id">Invalid Admin ID</string>
    <string name="provide_email_pass">Please Provide Email and Password></string>
    <string name="password_must_contain_six_char">Password must contain at least 6 Character</string>
    <string name="not_valid_user">Not a Valid User</string>
    <string name="singed_in">Signed in</string>
    <string name="phone_match">Phone Match</string>
    <string name="phone_not_registered">Phone Number Not Registered</string>
    <string name="user_found">User Found</string>
    <string name="select_gender">"Select gender: "</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other_gender">Other</string>
    <string name="name_required">Name required</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="signup_success">Signed up successfully!</string>
    <string name="sure_you_want_to_book">Are you Sure you want to Book the Room ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed_to_retrieve_data">Failed to Retrieve Data</string>
    <string name="user_not_retrieved">Could no\'t retrieve user</string>
    <string name="already_booked">Already Booked</string>
    <string name="sure_you_want_to_logout">Are you sure you want to Logout</string>
    <string name="current_weather_description">Rain Showers</string>
    <string name="admin_login">Admin Login</string>
    <string name="phone_no_hint">Phone No (3xxxxxxxxx)</string>
    <string name="string_signup">Signup</string>
    <string name="confirm_password">Confirm password</string>
    <string name="address">Address</string>
    <string name="rooms_of">Rooms of ::</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="otp_pin">OTP Pin</string>
    <string name="string_verify">Verify</string>
    <string name="total_rooms">Total Rooms:</string>
    <string name="room_no">Room No</string>
    <string name="welcome_desc">Welcome to Otel App. You can Book a Room by clicking \'Book Room Now\'.\n Else you Enjoy weather update or happy ads :)</string>
    <string name="follow_us">Follow us!</string>
    <string name="profile">Profile</string>
    <string name="rooms_booked">Booked Rooms</string>
    <string name="rate_us">Rate us</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="urdu">Urdu</string>
    <string name="english">Eng</string>
    <string name="get_started">Get Started</string>
    <string name="change_lang">Change Language</string>
</resources>