<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.signin_signup.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic__06" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/user_profile"
        android:textColor="@color/primaryTextColor"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="24dp"
                android:layout_gravity="start"
                android:textColor="@color/primaryTextColor"
                android:text="@string/enter_your_information_below"/>
            <EditText
                android:id="@+id/profileName"
                android:textColor="@color/primaryTextColor"
                android:drawableStart="@drawable/ic_baseline_perm_identity_24"
                android:drawablePadding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edit_text_bkg"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColorHint="@color/primaryTextColor" />
            <EditText
                android:id="@+id/profileEmail"
                android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                android:drawablePadding="5dp"
                android:textColor="@color/primaryTextColor"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edit_text_bkg"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColorHint="@color/primaryTextColor" />


            <EditText
                android:id="@+id/profilePhone"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:drawablePadding="5dp"
                android:textColor="@color/primaryTextColor"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edit_text_bkg"
                android:hint="@string/phone_number_3xxxxxx"
                android:inputType="phone"
                android:selectAllOnFocus="true"
                android:textColorHint="@color/primaryTextColor" />

            <EditText
                android:id="@+id/profileCNIC"
                android:drawableStart="@drawable/ic_baseline_perm_identity_24"
                android:drawablePadding="5dp"
                android:textColor="@color/primaryTextColor"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edit_text_bkg"
                android:hint="@string/cnic_without_dashes"
                android:inputType="numberSigned"
                android:selectAllOnFocus="true"
                android:textColorHint="@color/primaryTextColor" />
            <EditText
                android:id="@+id/profileAddress"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_baseline_house_24"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:layout_marginStart="24dp"
                android:textColor="@color/primaryTextColor"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edit_text_bkg"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="true"
                android:textColorHint="@color/primaryTextColor" />
            <EditText
                android:id="@+id/profileGender"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:textColor="@color/primaryTextColor"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edit_text_bkg"
                android:hint="@string/gender"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="true"
                android:textColorHint="@color/primaryTextColor" />





            <Button
                android:id="@+id/btnEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:elevation="20dp"
                android:background="@drawable/btn_styled"
                android:drawableEnd="@android:drawable/ic_menu_edit"
                android:drawableTint="@color/primaryColor"
                android:gravity="center"
                android:textSize="18sp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/edit_profile" />

            <Button
                android:id="@+id/btnSaveProfile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:elevation="20dp"
                android:background="@drawable/btn_styled"
                android:drawableEnd="@drawable/ic_baseline_check_24"
                android:drawableTint="@color/primaryColor"
                android:gravity="center"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/save_profile"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>